--- a/Meteo/Pages/HomePage.xaml
+++ b/Meteo/Pages/HomePage.xaml
@@ -2,11 +2,58 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Meteo.Pages.HomePage"
-             Title="HomePage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             xmlns:m="clr-namespace:Meteo.Models"
+             xmlns:v="clr-namespace:Meteo.Views"
+             xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
+             ios:Page.UseSafeArea="True"
+             Title="{OnIdiom 'St. Louis, Missouri USA', Desktop=''}"
+             Shell.NavBarIsVisible="{OnPlatform True, MacCatalyst=False}"
+             x:Name="this">
+
+    <ContentPage.MenuBarItems>
+        <MenuBarItem Text="File">
+            <MenuFlyoutItem Text="Quit"
+                            Command="{Binding QuitCommand}" />
+        </MenuBarItem>
+        <MenuBarItem Text="Locations">
+            <MenuFlyoutSubItem Text="Changer de localisation">
+                <MenuFlyoutItem Text="Pointe-Noire" />
+                <MenuFlyoutItem Text="Brazzaville" />
+                <MenuFlyoutItem Text="Ouesso" />
+            </MenuFlyoutSubItem>
+            <MenuFlyoutItem Text="Add a location"
+                            Command="{Binding AddLocationCommand}" />
+        </MenuBarItem>
+        <MenuBarItem Text="View">
+            <MenuFlyoutItem Text="Refresh"
+                            Command="{Binding RefreshCommand}" />
+            <MenuFlyoutItem Text="Changer le thème"
+                            Command="{Binding ToggleModeCommand}" />
+        </MenuBarItem>
+    </ContentPage.MenuBarItems>
+
+    <Grid 
+        ColumnDefinitions="{OnIdiom Phone='*', Default='*,500'}"
+        RowDefinitions="*">
+
+        <ScrollView Grid.Column="0">
+            <VerticalStackLayout Padding="{OnIdiom Phone='0,50', Default='0,50'}"
+                                 Spacing="{OnIdiom Phone=25, Default=50}">
+                <FlexLayout IsVisible="{OnIdiom Phone=False, Default=True}"
+                            MinimumHeightRequest="360"
+                            AlignItems="Center"
+                            AlignContent="Center"
+                            JustifyContent="SpaceEvenly">
+
+                    <v:CurrentWidget WidthRequest="200" />
+                    <v:WindLiveWidget x:Name="WindWidget"
+                                      WidthRequest="200" />
+
+                </FlexLayout>
+            </VerticalStackLayout>
+        </ScrollView>
+        
+    </Grid>
+
+    
 </ContentPage>
