--- a/Meteo/Views/Next7DWidget.xaml
+++ b/Meteo/Views/Next7DWidget.xaml
@@ -1,11 +1,80 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+<VerticalStackLayout xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Meteo.Views.Next7DWidget">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
-</ContentView>
+             x:Class="Meteo.Views.Next7DWidget"
+                     xmlns:c="clr-namespace:Meteo.Converters"
+                     xmlns:m="clr-namespace:Meteo.Models">
+
+    <VerticalStackLayout.Resources>
+        <c:TempSpanConverter x:Key="TempSpanConverter" />
+        <c:MaxTempOffsetConverter x:Key="MaxTempOffsetConverter" />
+        <c:MinTempOffsetConverter x:Key="MinTempOffsetConverter" />
+    </VerticalStackLayout.Resources>
+
+    <Label Text="Temp. Hebdomadaire"
+           Margin="{OnIdiom Phone='15,0', Default='25,0'}"
+           class="SectionTitle"/>
+
+    <ScrollView Orientation="Horizontal">
+        <HorizontalStackLayout Spacing="12"
+                               Padding="{OnIdiom Phone='15,0', Default='25,0'}"
+                               BindableLayout.ItemsSource="{Binding Week}">
+            <BindableLayout.ItemTemplate>
+                <DataTemplate>
+                    <VerticalStackLayout>
+                        <Label Text="{Binding DateTime, StringFormat='{0:ddd}'}"
+                               class="Subhead"
+                               HeightRequest="34"
+                               HorizontalOptions="Center" />
+                        <Label Text="{Binding Temperature.Maximum.Value, StringFormat='{0:F0}°'}"
+                               class="Subhead" HorizontalOptions="Center" HeightRequest="34"/>
+                        <Image Source="{Binding Day.Phrase,StringFormat='{0:F2}.png'}"
+                               WidthRequest="34" HeightRequest="34" HorizontalOptions="Center"/>
+
+                        <BoxView HeightRequest="1" 
+                                 WidthRequest="1"
+                                 Margin="{Binding Temperature.Maximum.Value, Converter={StaticResource MaxTempOffsetConverter}}"/>
+
+                        <Label Text="{Binding Temperature.Maximum.Value, StringFormat='{0:F0}°'}"
+                               class="Subhead" HorizontalOptions="Center" HeightRequest="20"/>
+                        <BoxView
+                            BackgroundColor="{StaticResource Accent_Blue100}"
+                            WidthRequest="10"
+                            CornerRadius="5"
+                            HorizontalOptions="Fill">
+                            <BoxView.HeightRequest>
+                                <MultiBinding Converter="{StaticResource TempSpanConverter}">
+                                    <Binding Path="Temperature.Minimum.Value" FallbackValue="0" />
+                                    <Binding Path="Temperature.Maximum.Value" FallbackValue="100" />
+                                </MultiBinding>
+                            </BoxView.HeightRequest>
+                        </BoxView>
+                        <Label
+                            Text="{Binding Temperature.Minimum.Value, StringFormat='{0:F0}°'}"
+                            class="Subhead" HorizontalOptions="Center" HeightRequest="20"/>
+                        <BoxView
+                            HeightRequest="1"
+                            WidthRequest="1"
+                            Margin="{Binding Temperature.Minimum.Value, Converter={StaticResource MinTempOffsetConverter}}"/>
+
+                        <BoxView class="HRule" />
+                        <StackLayout Orientation="Horizontal"
+                                     HeightRequest="40"
+                                     HorizontalOptions="Center">
+                            <Image Source="sm_solid_umbrella.png"
+                                   WidthRequest="16"
+                                   HeightRequest="16"
+                                   VerticalOptions="Center"/>
+
+                            <Label Text="13%"
+                                   class="SubContent"
+                                   VerticalOptions="Center"/>
+                        </StackLayout>
+                    </VerticalStackLayout>
+                </DataTemplate>
+            </BindableLayout.ItemTemplate>
+        </HorizontalStackLayout>
+    </ScrollView>
+
+
+</VerticalStackLayout>
