--- a/Meteo/Pages/MapPage.xaml
+++ b/Meteo/Pages/MapPage.xaml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:v="clr-namespace:Meteo.Views"
              x:Class="Meteo.Pages.MapPage"
-             Title="MapPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             Title="La carte">
+    <Grid
+        Grid.Row="{OnPlatform iOS=1, Default=0}"
+        ColumnDefinitions="{OnIdiom Phone='*', Default='*,400'}"
+        RowDefinitions="*">
+
+        <WebView Source="https://embed.windy.com" />
+
+        <v:WidgetsPanel 
+            IsVisible="{OnIdiom Phone=False, Default=True}"
+            Grid.Column="{OnIdiom Phone=0, Default=1}"/>
+
+    </Grid>
 </ContentPage>
